# arches_doorstep

./: README.md  package-lock.json  package.json  pyproject.toml  setup.py
arches_doorstep/: apps.py
arches_doorstep/inbuilt_processors/: Resource-list-sample.csv  concept check.py  concept_checker.py  csv_checker.py  dap_functions.py  date_checker.py  dt_comprehender.py  goodtables.py  mapping_structure.json  pii_checker.py  resource_check.py  resource_checker.py  spell_checker.py
arches_doorstep/media/js/views/components/etl_modules/: import_single_csv_with_processing.js
arches_doorstep/pkg/extensions/etl_modules/: import_single_csv_with_processing.py
arches_doorstep/src/arches_doorstep/etl_modules/ImportSingleCsvWithProcessing/: ImportSingleCsvWithProcessing.vue
arches_doorstep/src/arches_doorstep/etl_modules/ImportSingleCsvWithProcessing/components/: ErrorPreviewComponent.vue  Loading.vue  MessageBox.vue  ProcessingComponet.vue  TaskDetailsComponent.vue  UploadComponent.vue
arches_doorstep/src/arches_doorstep/etl_modules/ImportSingleCsvWithProcessing/store/: errorStore.js  mainStore.js
arches_doorstep/src/arches_doorstep/etl_modules/ImportSingleCsvWithProcessing/utils/: processTables.js
arches_doorstep/src/arches_doorstep/etl_modules/ImportSingleCsvWithProcessing/views/: ErrorPreviewView.vue  ProcessingView.vue  TaskDetailsView.vue  TaskStatusView.vue  UploadView.vue
arches_doorstep/src/arches_doorstep/etl_modules/ImportSingleCsvWithProcessing/views/Errors/: ConceptErrorView.vue  DateErrorView.vue  ErrorTableView.vue  ResourceErrorView.vue
arches_doorstep/src/arches_doorstep/etl_modules/components/: MessageBox.vue  Table.vue
arches_doorstep/src/arches_doorstep/utils/: processTables.js
arches_doorstep/templates/views/components/etl_modules/: import_single_csv_with_processing.htm
